--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "runt-timer",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "RunT - Timer System by Dvnny.no",
   "main": "dist/main/main.js",
   "scripts": {
@@ -50,6 +50,9 @@
     "appId": "com.dvnny.runt",
     "productName": "RunT",
     "icon": "src/logo.ico",
+    "asarUnpack": [
+      "server/**"
+    ],
     "directories": {
       "output": "release"
     },
